changed jetstream modal to fix overflow issue

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1247,6 +1247,9 @@ select {
 .mb-1 {
   margin-bottom: 0.25rem;
 }
+.mt-0 {
+  margin-top: 0px;
+}
 .mb-10 {
   margin-bottom: 2.5rem;
 }
